--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,10 @@ a {
     cursor: pointer;
 }
 
+.main__banner-catalog {
+    text-align: center;
+}
+
 .main__banner-catalog span {
     display: inline-block;
     margin: 0 30px;
@@ -392,6 +396,48 @@ a {
     align-items: flex-end;
 }
 
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+.close-button {
+    font-family: Arial, Helvetica, sans-serif;
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+}
+.close-button:hover {
+    background-color: darkgray;
+}
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
 @media screen and (max-width:900px) {
     .popular__wrapper,
     .services__wrapper {
@@ -491,6 +537,19 @@ a {
     
     .phone {
         margin-right: 10px;
+    }
+
+    .main__menu-link {
+        font-size: 9px;
+        padding: 10px 0;
+    }
+
+    .main__banner-button {
+        padding: 10px 5px;
+    }
+
+    .main__banner-catalog span {
+        margin: 0 5px;
     }
 
     .popular__wrapper {
