--- a/css/style.css
+++ b/css/style.css
@@ -129,9 +129,15 @@ a {
 
 .main__banner {
     height: 550px;
-    background: url('../img/bg/banner-bg.jpg') center center / cover no-repeat;
+    background: url('../img/bg/bg1.jpg') center center / cover no-repeat;
     margin-top: -25px;
     color: #fff;
+}
+
+.bg-overlay {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
 }
 
 .main__banner-content {
