--- a/css/style.css
+++ b/css/style.css
@@ -314,9 +314,9 @@ a {
     top: 80px;
     right: 0;
     width: 380px;
-    height: 360px;
+    height: auto;
     background-color: #fff;
-    padding: 60px;
+    padding: 30px;
 }
 
 .contact__header {
@@ -326,7 +326,7 @@ a {
 }
 
 .contact__phone-block {
-    margin-top: 19px;
+    margin-top: 10px;
     display: flex;
 }
 
@@ -338,13 +338,13 @@ a {
 
 .contact__phone {
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-weight: bold;
 
 }
 
 .contact__address, .contact__email{
-    margin-top: 37px;
+    margin-top: 30px;
 }
 
 .contact__address,
@@ -477,6 +477,26 @@ a {
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
+.modal__conf {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7px;
+}
+
+.modeal__conf-text {
+    color: #ccc;
+    font-size: 11px;
+    margin-left: 8px;
+    line-height: 1.42;
+    text-align: justify;
+}
+
+.modal__conf-link {
+    text-decoration: underline;
+    color: #006699;
+}
+
 @media screen and (max-width:900px) {
     .popular__wrapper,
     .services__wrapper {
@@ -563,7 +583,7 @@ a {
     .contact__block {
         padding: 30px;
         width: 260px;
-        height: 300px;
+        height: auto;
     }
 
     .contact__address, .contact__email{
